<resources>
    <string name="app_name">EasyBrowse</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>
    <string name="search_go_btn_description">Go to URL</string>
    <string name="action_forward">Forward</string>
    <string name="action_backward">Backward</string>
    <string name="action_clear_history">Clear History</string>
    <string name="action_add_to_bookmarks">Add to Bookmarks</string>
    <string name="action_open_bookmarks">Bookmarks</string>
    <string name="title_activity_open_bookmarks">OpenBookmarksActivity</string>
    <string name="action_menu_back">Back</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="action_home">Home</string>
    <string name="action_set_home">Set as home</string>
</resources>
