<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reload"
        android:icon="@mipmap/ic_reload_round"
        android:title="@string/action_reload"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_backward"
        android:icon="@mipmap/ic_backward"
        android:title="@string/action_forward"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_forward"
        android:icon="@mipmap/ic_forward"
        android:title="@string/action_forward"
        app:showAsAction="always"/>

    <!-- Below items should always be in the overflow menu -->

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_clear_history"
        android:title="@string/action_clear_history"
        app:showAsAction="never"/>

    <item android:id="@+id/action_add_to_bookmarks"
        android:title="@string/action_add_to_bookmarks"
        app:showAsAction="never"/>

    <item android:id="@+id/action_open_bookmarks"
        android:title="@string/action_open_bookmarks"
        app:showAsAction="never"/>

</menu>